# doc-reader

./: .env  main.py  pyproject.toml
src/: cli.py  ollama_client.py  pdf_to_corpus.py  qa.py  retriever.py
